--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "https": "^1.0.0",
-    "nodemon": "^3.0.1"
+    "install": "^0.13.0",
+    "nodemon": "^3.0.1",
+    "npm": "^10.2.0"
   }
 }
